Update main.sh